[package]
edition = "2021"
name = "rust-redis-mysql-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = {version = "1.4", features = ["mysql", "r2d2"]}
dotenv = "0.15"
env_logger = "0.9"
futures-util = {version = "0.3.17", default-features = false, features = ["std"]}
log = "0.4"
r2d2_redis = "0.14.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "0.8", features = ["serde", "v4"]}
bincode = "1.0"
failsafe =  "1.1.0"